edit swagger docs
